# konnekt-session

./: .dockerignore  .env.example  .gitignore  .rules  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.adoc  README.md  basic-lobby-37dbc2d30b8b8daa_bg.wasm  basic-lobby-608fda7073a859a0.js  basic-lobby-608fda7073a859a0_bg.wasm  basic-lobby-9f898ca8ae8e5654.js  basic-lobby-9f898ca8ae8e5654_bg.wasm  basic-lobby-b8288a104f2c7bca.js  basic-lobby-b8288a104f2c7bca_bg.wasm  basic-lobby-f63ef4b8c224f327.js  basic-lobby-f63ef4b8c224f327_bg.wasm  build.rs  docker-compose.yml  index.html  justfile  konnekt_session_app-11779781c06a40ed_bg.wasm  konnekt_session_app-11fac515fa449bac.js  konnekt_session_app-11fac515fa449bac_bg.wasm  konnekt_session_app-1b93e8841703eac6.js  konnekt_session_app-1b93e8841703eac6_bg.wasm  konnekt_session_app-20511d0073c852de.js  konnekt_session_app-20511d0073c852de_bg.wasm  konnekt_session_app-2482449cbb6471b5.js  konnekt_session_app-2482449cbb6471b5_bg.wasm  konnekt_session_app-270a90becc1f351b.js  konnekt_session_app-270a90becc1f351b_bg.wasm  konnekt_session_app-2a7db0595f94d0ee.js  konnekt_session_app-2a7db0595f94d0ee_bg.wasm  konnekt_session_app-2d6cc496488e5600.js  konnekt_session_app-2d6cc496488e5600_bg.wasm  konnekt_session_app-2ecb0079fed6f991.js  konnekt_session_app-2ecb0079fed6f991_bg.wasm  (+122 more)
.github/workflows/: gh-pages.yml
docs/: 01-understand.adoc  02-discover.adoc  03-decompose.adoc  04-strategize.adoc  05-connect.adoc  06-organise.adoc  README.adoc
docs/adr/: 0001-use-rust-for-implementation.adoc  0002-use-yew-for-frontend.adoc  0003-use-matchbox-for-signaling.adoc  0004-use-client-side-key-generation-for-identity.adoc  0005-use-tracing-for-logging-and-diagnostics.adoc  0006-use-cargo-workspace-for-modular-architecture.adoc  0007-use-cucumber-for-behavior-driven-testing.adoc  0008-use-thiserror-for-domain-errors.adoc  0009-use-json-with-feature-gated-messagepack.adoc  0010-use-event-sourcing-for-lobby-state.adoc  0011-use-std-async-for-wasm-compatibility.adoc  README.adoc  (+12 more)
konnekt-session/: Cargo.toml  index.html  justfile
konnekt-session-bevy/: Cargo.toml
konnekt-session-bevy/src/: lib.rs  plugin.rs
konnekt-session-cli/: Cargo.toml  justfile
konnekt-session-cli/src/: error.rs  lib.rs  main.rs
konnekt-session-cli/src/application/: acl.rs  mod.rs  runtime.rs  runtime_builder.rs  state_sync.rs
konnekt-session-cli/src/application/use_cases/: check_host_grace_period.rs  handle_message_received.rs  handle_peer_connected.rs  handle_peer_disconnected.rs  handle_peer_timed_out.rs  kick_guest.rs  mod.rs  toggle_participation_mode.rs
konnekt-session-cli/src/domain/: mod.rs  session_state.rs
konnekt-session-cli/src/infrastructure/: error.rs  mod.rs  observability.rs  session_runtime.rs
konnekt-session-cli/src/presentation/tui/: app.rs  event.rs  mod.rs  ui.rs
konnekt-session-cli/src/presentation/tui/app/: activities_tab.rs  events_tab.rs  help_tab.rs  lobby_tab.rs  mod.rs  participants_tab.rs  results_tab.rs  session_tab.rs
konnekt-session-cli/src/presentation/tui/ui/: activities.rs  events.rs  footer.rs  header.rs  help.rs  lobby.rs  mod.rs  participants.rs  results.rs  session.rs
konnekt-session-core/: Cargo.toml
konnekt-session-core/src/: lib.rs
konnekt-session-core/src/activities/: echo.rs  mod.rs
konnekt-session-core/src/application/: commands.rs  event_loop.rs  events.rs  mod.rs
konnekt-session-core/src/application/runtime/: command_queue.rs  domain_loop.rs  mod.rs
konnekt-session-core/src/domain/: activity.rs  activity_run.rs  events.rs  lobby.rs  mod.rs  participant.rs
konnekt-session-core/src/traits/: activity.rs
konnekt-session-p2p/: Cargo.toml  README.adoc
konnekt-session-p2p/examples/: v2_basic_guest.rs  v2_basic_host.rs
konnekt-session-p2p/src/: connection.rs  error.rs  lib.rs  session.rs
konnekt-session-p2p/src/application/: config.rs  event_translator.rs  events.rs  mod.rs  session.rs  sync_manager.rs
konnekt-session-p2p/src/application/runtime/: message_queue.rs  mod.rs  p2p_loop.rs  runtime_builder.rs  session_loop.rs  session_loop_v2.rs  session_loop_v2_builder.rs
konnekt-session-p2p/src/domain/: event.rs  event_log.rs  ice_server.rs  mod.rs  peer.rs  peer_participant_map.rs  peer_state.rs  session.rs
konnekt-session-p2p/src/infrastructure/: connection.rs  connection_trait.rs  error.rs  message.rs  mod.rs  transport.rs  transport_builder.rs
konnekt-session-p2p/tests/: instrumentation_test.rs  integration_test.rs  session_sync.rs
konnekt-session-p2p/tests/support/: mock_connection.rs  mod.rs
konnekt-session-tests/: Cargo.toml  justfile
konnekt-session-tests/src/: lib.rs
konnekt-session-tests/tests/: bdd_bevy.rs  bdd_tests.rs  bdd_who_am_i.rs
konnekt-session-tests/tests/features/: activity_lifecycle.feature  authentication.feature  bevy_application.feature  echo_challenge.feature  edge-cases.feature  event_translation.feature  host_delegation.feature  integration-flows.feature  lobby_management.feature  p2p_integration.feature  p2p_messaging.feature  participation_modes.feature  peer_participant_mapping.feature  who_am_i.feature
konnekt-session-tests/tests/steps/: bevy_application_steps.rs  echo_challenge_steps.rs  event_translation_steps.rs  host_delegation_steps.rs  lobby_management_steps.rs  mod.rs  p2p_integration_steps.rs  peer_participant_mapping_steps.rs  who_am_i_steps.rs
konnekt-session-workspace/: index.md
konnekt-session-yew/: Cargo.toml  Trunk.toml  index.html  justfile  preview.html  styles.css
konnekt-session-yew/examples/: basic-lobby.rs
konnekt-session-yew/src/: app.rs  lib.rs  preview.rs
konnekt-session-yew/src/components/: activity_list.rs  activity_planner.rs  activity_submission.rs  lobby_view.rs  mod.rs  participant_list.rs  results_view.rs  session_info.rs  submission_status.rs
konnekt-session-yew/src/hooks/: mod.rs  use_host_connectivity.rs  use_lobby.rs  use_session.rs
konnekt-session-yew/src/pages/: login_screen.rs  mod.rs  session_screen.rs
konnekt-session-yew/src/providers/: mod.rs  session_provider.rs
src/: app.rs  lib.rs  main.rs
(+174 files in other folders)
