[workspace]
resolver = "2"

members = [
    "konnekt-session-core",
    "konnekt-session-tests",
    "konnekt-session"  # Legacy - to be deprecated
, "konnekt-session-cli", "konnekt-session-p2p"]

# Shared workspace metadata
[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["Konnekt Session Contributors"]
license = "MIT"
repository = "https://github.com/konnektoren/konnekt-session"
homepage = "https://github.com/konnektoren/konnekt-session"
readme = "README.adoc"
keywords = ["p2p", "lobby", "multiplayer", "webrtc", "wasm"]
categories = ["game-development", "network-programming", "wasm", "web-programming"]
