[package]
name = "konnekt-session-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
konnekt-session-core = { path = "../konnekt-session-core" }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
uuid = { workspace = true }
