
[package]
name = "konnekt-session-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "konnekt_session_cli"
path = "src/lib.rs"

[[bin]]
name = "konnekt-cli"
path = "src/main.rs"

[dependencies]
konnekt-session-core = { path = "../konnekt-session-core" }
clap = { version = "4.5", features = ["derive"] }
schemars = "1.2"
serde_json = "1.0"
serde = "1.0"
thiserror = "1.0"
aide = { version = "0.15", features = ["scalar"] }
indexmap = "2.12.1"

[dev-dependencies]
