
[package]
name = "konnekt-session-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "konnekt_session_cli"
path = "src/lib.rs"

[[bin]]
name = "konnekt-cli"
path = "src/main.rs"

[[bin]]
name = "konnekt-tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[dependencies]
konnekt-session-core = { path = "../konnekt-session-core" }
konnekt-session-p2p = { path = "../konnekt-session-p2p" }

clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
serde = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# TUI (optional, only for interactive mode)
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
default = []
tui = ["ratatui", "crossterm"]

[dev-dependencies]
