
[package]
name = "konnekt-session-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

default-run = "konnekt-cli"

[lib]
name = "konnekt_session_cli"
path = "src/lib.rs"

[[bin]]
name = "konnekt-cli"
path = "src/main.rs"

[[bin]]
name = "konnekt-tui"
path = "src/bin/tui.rs"
required-features = ["tui"]


[dependencies]
konnekt-session-core = { path = "../konnekt-session-core" }
konnekt-session-p2p = { path = "../konnekt-session-p2p" }

# CLI
clap = { workspace = true }

# Serialization
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

# Observability (optional)
console-subscriber = { workspace = true, optional = true }
tracing-chrome = { version = "0.7", optional = true }

# TUI (optional)
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
arboard = { workspace = true, optional = true }

[features]
default = []
tui = ["ratatui", "crossterm", "arboard"]
console = ["konnekt-session-p2p/console", "console-subscriber", "tokio/tracing"]
chrome-trace = ["tracing-chrome"]

[dev-dependencies]
