[package]
name = "konnekt-session-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { workspace=true }
serde_json = { workspace=true }
thiserror = "1.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
schemars = { version = "1.2", features = ["uuid1", "preserve_order"] }

[dev-dependencies]
