[package]
name = "konnekt-session-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
# Core domain
konnekt-session-core = { path = "../konnekt-session-core" }

# P2P networking
matchbox_socket = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "time"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
instant = { workspace = true }

# Observability (optional)
console-subscriber = { workspace = true, optional = true }

[features]
default = []
console = ["console-subscriber", "tokio/tracing"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
