[package]
name = "konnekt-session-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
# Core domain
konnekt-session-core = { path = "../konnekt-session-core" }

# P2P networking
matchbox_socket = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "time"], optional = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
instant = { workspace = true }

# Observability (optional)
console-subscriber = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[features]
native = ["tokio"]
console = ["native", "console-subscriber", "tokio/tracing"]

[[example]]
name = "v2_basic_host"
path = "examples/v2_basic_host.rs"
required-features = ["native"]

[[example]]
name = "v2_basic_guest"
path = "examples/v2_basic_guest.rs"
required-features = ["native"]
