[package]
name = "konnekt-session-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
output-json = ["cucumber/output-json"]
output-junit = ["cucumber/output-junit"]

[dependencies]
konnekt-session-core = { path = "../konnekt-session-core" }
konnekt-session-p2p = { path = "../konnekt-session-p2p" }
cucumber = { version = "0.22" }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd_tests"
harness = false
